--- a/keys_generator/requirements.txt
+++ b/keys_generator/requirements.txt
@@ -1,6 +1,7 @@
 keyring==21.5.0
 keyrings.alt==4.2.0
 pycryptodome==3.19.1
-pyinstaller==5.13.1
+pyinstaller==6.8.0
 SecretStorage~=3.3.3
 cryptography~=42.0.8
+importlib-metadata==4.13.0
