--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,11 +1,8 @@
 name: Compile
 
 on:
-  push:
-    branches: [ main ]
-
-  pull_request:
-    branches: [ main ]
+  release:
+    types: [published]
 
   workflow_dispatch:
 
