--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,7 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest]
         include:
-          - os: ubuntu-latest
+          - os: [self-hosted, linux, X64]
             target: Linux
 
           - os: macos-latest
