--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ pycparser==2.22
 pycryptodome==3.19.1
 # pyinstaller==6.8.0
 git+https://github.com/pyinstaller/pyinstaller.git@develop
-pyinstaller-hooks-contrib==2024.6
+pyinstaller-hooks-contrib
 pytz==2022.7.1
 SecretStorage==3.3.3
 six==1.16.0
