--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,18 +20,19 @@ jobs:
           - os: [self-hosted, linux, X64]
             target: Linux
 
-          - os: macos-latest
+          # M1
+          - os: macos-14
             target: Macos
 
-          - os: macos-14-large
-            target: x86_64-apple-darwin
+          # X86
+          - os: macos-13
+            target: Macos
 
           - os: windows-latest
             target: Windows
 
           - os: [self-hosted, linux, ARM64]
             target: Linux
-            arch: arm64
 
     steps:
       - name: Checkout Repository
@@ -46,25 +47,29 @@ jobs:
       # statix won't install in Windows nor we need it
       - name: Install dependencies
         run: |
-          pip3 install wheel setuptools
-
           if [[ "$(uname -s)" =~ "Linux" ]]; then
             sudo apt-get update
             sudo apt-get -y install patchelf scons
-            pip3 install staticx==0.14.1
           fi
+          if [ -x /home/github/py312/bin/pip3 ]; then
+            source /home/github/py312/bin/activate
+            pip3 install wheel setuptools
+            pip3 install staticx==0.14.1
+            pip3 install wheel setuptools
+          else
+            pip3 install wheel setuptools
+          fi
+
+          pip3 install -r requirements.txt
 
       # nasty hack to use our local python is avaialble. The one provided by GitHub does not appear
       # to work for ARM64 Linux
       - name: Build binaries for cqlsh and keys_generator
         run: |
           set -x
-          if [ -x /opt/py312/bin/pip3 ]; then
-            source /opt/py312/bin/activate
-            pip3 install staticx==0.14.1
+          if [ -x /home/github/py312/bin/pip3 ]; then
+            source /home/github/py312/bin/activate
           fi
-
-          pip3 install -r requirements.txt
 
           mkdir -p dist
 
