--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,7 +51,6 @@ jobs:
           if [[ "$(uname -s)" =~ "Linux" ]]; then
             sudo apt-get update
             sudo apt-get -y install patchelf scons
-            pip3 install staticx==0.14.1
           fi
 
       # nasty hack to use our local python is avaialble. The one provided by GitHub does not appear
@@ -59,8 +58,8 @@ jobs:
       - name: Build binaries for cqlsh and keys_generator
         run: |
           set -x
-          if [ -x /opt/py312/bin/pip3 ]; then
-            source /opt/py312/bin/activate
+          if [ -x /home/github/bin/pip3 ]; then
+            source /home/github/bin/activate
             pip3 install staticx==0.14.1
           fi
 
