--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,6 +38,9 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
+      - name: Set binaries version
+        run: sed -i.bak "s/CUSTOM_VERSION.*/CUSTOM_VERSION = '$GITHUB_REF_NAME'/g" v6.0.0-ACv4.0.7/cqlsh.py
+
       - name: Setup Python v3.12
         uses: actions/setup-python@v5
         if: ${{ matrix.target != 'Linux' }}
