--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -2,12 +2,12 @@ name: build
 on:
   push:
     branches:
-      - trivy
+      - main
   pull_request:
 jobs:
   build:
-    name: Build
-    runs-on: ubuntu-20.04
+    name: Run Trivy
+    runs-on: ubuntu-22.04
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -24,7 +24,8 @@ jobs:
           ignore-unfixed: true
           format: 'sarif'
           output: 'trivy-results.sarif'
-          severity: 'CRITICAL'
+          severity: "MEDIUM,HIGH,CRITICAL"
+          scanners: "vuln"
 
       - name: Upload Trivy scan results to GitHub Security tab
         uses: github/codeql-action/upload-sarif@v2
