--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -25,7 +25,7 @@ jobs:
           format: 'sarif'
           output: 'trivy-results.sarif'
           severity: "MEDIUM,HIGH,CRITICAL"
-          scanners: "vuln"
+          #scanners: "vuln"
 
       - name: Upload Trivy scan results to GitHub Security tab
         uses: github/codeql-action/upload-sarif@v2
