--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,9 @@
 name: Compile
 
 on:
+  push:
+    tags:
+      - '*'
   release:
     types: [published]
 
@@ -11,9 +14,39 @@ defaults:
     shell: bash
 
 jobs:
+  release:
+    name: Create Release
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Fail if tag is not prefixed by v
+        run: |
+          if [[ $GITHUB_REF_NAME =~ ^v[0-9]+\.[0-9]+\.[0-9].* ]]; then
+              echo "Valid version format"
+          else
+              echo "Invalid version format"
+              exit 1
+          fi
+
+      - name: Create release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          tag: ${{ github.ref_name }}
+        run: |
+          OPTIONS=""
+          if [[ $GITHUB_REF_NAME == *"internal"* ]] || [[ $GITHUB_REF_NAME == *"beta"* ]]; then
+            OPTIONS="--prerelease"
+          fi
+          gh release create "$GITHUB_REF_NAME" \
+              --repo="$GITHUB_REPOSITORY" \
+              --title="Release for ${GITHUB_REF_NAME}" \
+              --generate-notes $OPTIONS
   build:
     name: Build on ${{ matrix.target }}
     runs-on: ${{ matrix.os }}
+    needs: [release]
     strategy:
       matrix:
         include:
