--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,10 +1,9 @@
 name: Compile
 
 on:
-  release:
-    types: [published]
-
-  workflow_dispatch:
+  push:
+    tags:
+      - '*.*.*'
 
 defaults:
   run:
