--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -59,7 +59,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set binaries version
-        run: sed -i.bak "s/^CUSTOM_VERSION.*/CUSTOM_VERSION = '$GITHUB_REF_NAME'/g" v6.0.0-ACv4.0.7/cqlsh.py
+        run: sed -i.bak "s/^CUSTOM_VERSION.*/CUSTOM_VERSION = '$GITHUB_REF_NAME'/g" cqlsh/cqlsh.py
 
       - name: Setup Python v3.12
         uses: actions/setup-python@v5
