--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -121,3 +121,27 @@ jobs:
             dist/keys_generator*tar
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  generate-sbom:
+    runs-on: ubuntu-latest
+    needs: [build]
+    if: ${{ !cancelled() && success() && !contains(github.ref, 'internal') }}
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js v20.17.0
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20.17.0
+
+      - name: Generate SBOM 1/2
+        uses: anchore/sbom-action@v0
+        with:
+          artifact-name: sbom.spdx.json
+
+      - name: Generate SBOM 2/2
+        uses: anchore/sbom-action@v0
+        with:
+          artifact-name: sbom.cyclonedx.json
+          format: cyclonedx-json
