--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ cffi==1.16.0
 click==8.1.7
 cryptography==44.0.2
 Cython==0.29.37
-geomet==0.2.1.post1
+geomet==1.1.0
 importlib_metadata==8.0.0
 jaraco.classes==3.4.0
 jaraco.context==5.3.0
@@ -24,7 +24,6 @@ pyinstaller-hooks-contrib==2024.7
 pytz==2022.7.1
 SecretStorage==3.3.3
 setuptools==70.3.0
-six==1.16.0
 wheel==0.43.0
 zipp==3.19.2
 pyreadline3
