--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 altgraph==0.17.4
-cassandra-driver==3.29.1
+cassandra-driver==3.29.2
 cffi==1.16.0
 click==8.1.7
 cryptography==44.0.2
 Cython==0.29.37
-geomet==1.1.0
+geomet==0.2.1.post1
 importlib_metadata==8.0.0
 jaraco.classes==3.4.0
 jaraco.context==5.3.0
