--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -115,6 +115,7 @@ jobs:
 
       - name: Malware Scanner
         uses: dell/common-github-actions/malware-scanner@main
+        if: ${{ matrix.target == 'Linux' }}
         with:
           directories: .
           options: -ri
